--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "^8.1.0"
+    "eslint": "^8.1.0",
+    "jsdoc": "^3.6.10"
   }
 }
