--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 CONNECTION_URI=mongodb+srv://testUser:testUser@cluster0.wdhur.mongodb.net/test?retryWrites=true&w=majority
-NODE_ENV=development
+NODE_ENV=production
